--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
     max-width: 375px;
     margin: 5rem auto;
     background-color: #fff;
-    /* box-shadow: 0 0 20px 20px hsl(225, 100%, 94%); */
+    box-shadow: 0 0 30px 20px lightgray;
     border-radius: 20px;
     overflow: hidden;
     text-align: center;
@@ -88,6 +88,7 @@ body {
 
 .card__header {
     padding: 0 3rem;
+    margin-top: 3rem;
 }
 
 .card__title {
@@ -153,4 +154,18 @@ footer {
 }
 .attribution a {
     color: hsl(228, 45%, 44%);
+}
+
+@media screen and (min-width: 1024px) {
+    .card {
+        max-width: 425px;
+    }
+
+    .card__header {
+        padding: 0 7rem;
+    }
+
+    .card__body {
+        padding: 4rem;
+    }
 }
