Adding background image for desktop layout.

--- a/style.css
+++ b/style.css
@@ -157,6 +157,10 @@ footer {
 }
 
 @media screen and (min-width: 1024px) {
+    .container {
+        background-image: url(images/pattern-background-desktop.svg);
+    }
+
     .card {
         max-width: 425px;
     }
